# apis

./: .gitignore  README.md
00_ocr-api/: Dockerfile  main.py
00_template/: README.md  main.py
01_image_hex/: Dockerfile  docker-compose.yml  main.py  requirements.txt
01_pptx-to-md-api/: Dockerfile  README.md  docker-compose.yml  main.py
02_tracker-api/: Dockerfile  docker-compose.yml  main.py
03_image-s3-api/: .env.example  Dockerfile  Makefile  docker-compose.yml  main.py
03_image-s3-api/static/: gallery.html  index.html
04_pixel_tracker/: .env.example  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
05_llm-api/: .env.example  Dockerfile  Makefile  api.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
06_ocr-api/: docker-compose.yml
07_new-api/: Dockerfile  docker-compose.yml
07_notification-api/: Dockerfile  docker-compose.yml  main.py
08_quiz_answers/: main.py
10_host-web/: .env.example  Makefile  main.py  pyproject.toml
99_development/file-api/: Dockerfile  Makefile  docker-compose.yml
99_development/file-api/app/: main.py  schemas.py  storage.py
99_development/openapi-html/: index.html
99_development/tts-api/: Dockerfile  Makefile
ocr-api/: Dockerfile  Makefile  api.py  docker-compose.yml
pptx-to-md-api/: Dockerfile  api.py  docker-compose.yml  requirements.txt
tracker-api/: .env.example  api.py  docker-compose.yml
